--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.LoginAndRegister.LoginRegisterActivity"
+            android:name=".LoginRegisterActivity"
             android:exported="true"
             android:label="Login And Register Page"
             >
@@ -24,10 +24,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.LoginAndRegister.RegisterFragment"
             android:exported="true"
             android:label="Register Page">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.LoginAndRegister.LoginFragment"
+            android:exported="true"
+            android:label="Login Page">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -65,16 +76,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.LoginAndRegister.LoginFragment"
-            android:exported="true"
-            android:label="@string/login_page">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
 
     </application>
