--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,40 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travelambda"
         tools:targetApi="31">
-
-        <activity
-            android:name=".LoginRegisterActivity"
-            android:exported="true"
-            android:label="Login And Register Page"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ui.LoginAndRegister.RegisterFragment"
-            android:exported="true"
-            android:label="Register Page">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.LoginAndRegister.LoginFragment"
-            android:exported="true"
-            android:label="Login Page">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -66,6 +32,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginRegisterActivity"
+            android:exported="true"
+            android:label="Login And Register Page"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name=".ui.LoginAndRegister.RegisterFragment"
+            android:exported="true"
+            android:label="Register Page">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.LoginAndRegister.LoginFragment"
+            android:exported="true"
+            android:label="Login Page">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".HomeTabActivity"
             android:exported="true"
