--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travelambda"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ui.forgotPassword.forgotPasswordFragment"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -35,20 +39,18 @@
         <activity
             android:name=".LoginRegisterActivity"
             android:exported="true"
-            android:label="Login And Register Page"
-            >
+            android:label="Login And Register Page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:windowSoftInputMode="adjustResize"
             android:name=".ui.LoginAndRegister.RegisterFragment"
             android:exported="true"
-            android:label="Register Page">
+            android:label="Register Page"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,14 +61,12 @@
             android:name=".ui.LoginAndRegister.LoginFragment"
             android:exported="true"
             android:label="Login Page">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".HomeTabActivity"
             android:exported="true"
@@ -77,9 +77,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
     </application>
 
 </manifest>
